# snek

./: CMakeLists.txt  IView.hpp  README.md  file.txt  hello.cpp  iview.hpp  snake.cpp  snake.hpp  todo.yaml
lib/curses2_view/: curses2_view.cpp  curses2_view.hpp
lib/curses_view/: curses_view.cpp  curses_view.hpp
lib/hello_snake/: hello.cpp
lib/snake/: snake.cpp
lib/text_view/: text_view.cpp  text_view.hpp
script/: win.txt
